--- a/MultiFactor.AspNet.Sample/Web.config
+++ b/MultiFactor.AspNet.Sample/Web.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
-  Дополнительные сведения о настройке приложения ASP.NET см. на странице
    https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
@@ -9,9 +8,12 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    
+    <!-- mfa settings-->
     <add key="mfa-api-url" value="https://api.multifactor.ru" />
-    <add key="mfa-api-key" value="rs_c0f41bf7f4b80ceffc9333f5546f4" />
-    <add key="mfa-api-secret" value="9329105a1bca8687fcc5709e7a0987cc" />
+    <add key="mfa-api-key" value="" />
+    <add key="mfa-api-secret" value="" />
+  
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
